bug: Sidebar z-index set to 999

--- a/src/components/pages/blogSidebar/BlogSidebar.css
+++ b/src/components/pages/blogSidebar/BlogSidebar.css
@@ -2,6 +2,7 @@
   width: 280px;
   position: fixed;
   left: 0;
+  z-index: 999;
   top: 55px;
   overflow-y: scroll;
   background-color: #fff;
